メタタグの追加

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&family=Noto+Sans+JP&display=swap" rel="stylesheet">
   <!-- ogp -->
 <meta content="予定表ジェネレータ" property="og:title">
+<meta property="og:description" content="予定表ジェネレータです。あなたの考えた計画を友人・知人・恋人に共有しましょう" />
+<meta property="og:site_name" content="予定表ジェネレーター" />
 <meta content="summary_large_image" name="twitter:card">
 <meta content="http://127.0.0.1:5500/" property="og:url">
 </head>
